--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "axios": "^0.18.0",
     "bootstrap": "3",
     "flatpickr": "^4.5.2",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "nouislider": "^12.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
