--- a/package.json
+++ b/package.json
@@ -11,7 +11,5 @@
     "jquery": "^3.3.1",
     "nouislider": "^12.1.0"
   },
-  "devDependencies": {
-    "webpack-dev-server": "3.11.11"
-  }
+  "devDependencies": {}
 }
