--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "3.4.0",
     "flatpickr": "^4.5.2",
     "jquery": "^3.3.1",
+    "js-autocomplete": "^1.0.4",
     "nouislider": "^12.1.0"
   },
   "devDependencies": {}
